# JniNetwork

./: LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/leon/jninetdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/leon/jninetdemo/: MainActivity.kt
app/src/main/java/com/leon/jninetdemo/data/: CityInfo.kt  Forecast.kt  WeatherData.kt  WeatherResponse.kt
app/src/main/java/com/leon/jninetdemo/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/leon/jninetdemo/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
netlibrary/: build.gradle.kts
netlibrary/src/androidTest/java/com/leon/netlibrary/: ExampleInstrumentedTest.java
netlibrary/src/main/cpp/: CMakeLists.txt  main.cpp
netlibrary/src/main/cpp/include/curl/: curlbuild.h
netlibrary/src/main/cpp/utils/: crypto_utils.cpp  net_task.cpp  net_task.h
netlibrary/src/test/java/com/leon/netlibrary/: ExampleUnitTest.java
